--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   
                     <div>
                         <ul class="contact-info">
-                            <li class="email ">vineeth07msd@gmail.com</li>
+                            <a href="email:vineeth07msd@gmail.com" style="text-decoration:none"><li class="email" >vineeth07msd@gmail.com</li></a>
                             <li class="phone ">+91-6304895639</li>
                         </ul>
 
