--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     <div>
                         <ul class="contact-info">
                             <!-- <a href="mailto:vineeth07msd@gmail.com" style="text-decoration:none"><li class="email" >vineeth07msd@gmail.com</li></a> -->
-                            <a href="mailto:vineeth07msd@gmail.com" class="email" style="text-decoration:none">vineeth07msd@gmail.com</a>
+                        <a href="mailto:vineeth07msd@gmail.com" class="email" style="text-decoration:none">vineeth07msd@gmail.com</a>
                             <!-- <li class="phone ">+91-6304895639</li> -->
-                        <label>Phone : &nbsp</label><a href="tel:+919000270348" class="phone" style="text-decoration:none; color:black; font-weight:500"> 9000270348</a>
+                        <a href="tel:+916304187512" class="phone" style="text-decoration:none; color:black; font-weight:500"> 6304187512</a>
                         </ul>
 
                     </div>
